--- a/src/apps/Layout/courses/components/AllUsersBlock/fonts/style.css
+++ b/src/apps/Layout/courses/components/AllUsersBlock/fonts/style.css
@@ -7,3 +7,24 @@
     font-weight: 300;
     font-style: normal;
   }
+
+
+  @font-face {
+    font-family: 'Montserrat';
+    src: local('Montserrat Medium'), local('Montserrat-Medium'),
+        url('Montserrat-Medium.woff2') format('woff2'),
+        url('Montserrat-Medium.woff') format('woff'),
+        url('Montserrat-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Montserrat';
+    src: local('Montserrat Extra Bold'), local('Montserrat-Extra-Bold'),
+        url('Montserrat-ExtraBold.woff2') format('woff2'),
+        url('Montserrat-ExtraBold.woff') format('woff'),
+        url('Montserrat-ExtraBold.ttf') format('truetype');
+    font-weight: 800;
+    font-style: normal;
+  }
