--- a/src/apps/Layout/courses/components/TitleCours/TitleCourse.css
+++ b/src/apps/Layout/courses/components/TitleCours/TitleCourse.css
@@ -44,6 +44,7 @@
     max-width: 1120px;
     padding: 0 0 0 10px;
     text-transform: uppercase;
+    font-family: 'Montserrat';
 }
 
 hr {
@@ -56,6 +57,7 @@ hr {
   transform: translateX(calc(-50% + 8px)) rotate(90deg);
   width: 238px;
   opacity: 1;
+  z-index: 10;
 }
 
 
