--- a/src/apps/Layout/geeksPro/blocks-14/geeksCompanies/GeeksCompanies.module.css
+++ b/src/apps/Layout/geeksPro/blocks-14/geeksCompanies/GeeksCompanies.module.css
@@ -25,7 +25,7 @@
 }
 @media only screen and (max-width: 834px) {
     .container{
-        padding: 0 60px !important;
+        padding: 0 40px !important;
     }
 }
 
@@ -42,8 +42,13 @@
     margin-right: auto;
     display: block;
     width: 100%;
+    padding: 0px !important;
+    max-width: 1475px !important;
+    font-family: "Montserrat", sans-serif;
+    overflow: hidden;
+    position: relative;
+    left: 20px;
 }
-
 .partners {
     color: #2c2e35;
     font-family: "Reforma Grotesk", sans-serif;
@@ -71,6 +76,14 @@
         max-width: 260px;
     }
 }
+
+@media only screen and (max-width: 430px) {
+    .partners{
+        font-size: 26px;
+        line-height: 110%;
+        max-width: fit-content;
+    }
+}
 .slider_wrap {
     overflow-x: auto;
     overflow-y: hidden;
@@ -78,6 +91,12 @@
     list-style: none;
     margin-left: auto;
     margin-right: auto;
+    height: 230px;
+}
+@media only screen and (max-width: 1490px) {
+    .slider_wrap{
+        padding: 0 60px !important;
+    }
 }
 .slider {
     cursor: grab;
