--- a/src/apps/Layout/geeksPro/blocks-14/geeksCompanies/Slider.module.css
+++ b/src/apps/Layout/geeksPro/blocks-14/geeksCompanies/Slider.module.css
@@ -10,3 +10,13 @@
 .image_container:hover img {
     filter: grayscale(0%);
 }
+@media (min-width: 768px) {
+    .image_container img {
+        filter: grayscale(100%);
+        border: none;
+        outline: none;
+    }
+    .image_container:hover img {
+        filter: grayscale(0%);
+    }
+}
