--- a/src/apps/Layout/geeksPro/blocks-14/mainGeeksPro/GeeksPro.module.css
+++ b/src/apps/Layout/geeksPro/blocks-14/mainGeeksPro/GeeksPro.module.css
@@ -124,10 +124,11 @@
     justify-content: center;
     outline: 0;
     margin: 0;
-    padding: 12px 24px;
+    padding: 12px 24px !important;
     cursor: pointer;
     border-radius: 0;
     border: 2px solid white;
+    background-color: white;
     font-size: 18px;
     font-weight: 500;
     font-family: "Montserrat", sans-serif;
