--- a/src/apps/Layout/main/mainComponents/studentsGraduates/studentsGraduates.module.css
+++ b/src/apps/Layout/main/mainComponents/studentsGraduates/studentsGraduates.module.css
@@ -1,4 +1,27 @@
 
+.sliderContainer {
+    position: relative;
+}
+
+.containerTitle {
+    margin-left: 40px;
+}
+
+.title {
+    font-family: var(--root-font-grotesk);
+    color: var(--primary-color);
+    font-size: 70px;
+    line-height: 110%;
+    text-align: left;
+    text-transform: uppercase;
+}
+
+.sliderInner {
+    margin: 40px auto 0;
+    max-width: 1440px;
+    width: 100%;
+}
+
 .person {
     width: 420px;
     margin-right: 90px;
@@ -18,6 +41,8 @@
     font-size: 14px;
     font-weight: 500;
     margin-bottom: 8px;
+    line-height: 140%;
+    letter-spacing: -.02em;
     opacity: .5;
     text-align: left;
 }
@@ -49,8 +74,33 @@
 
 .subtitle {
     margin-top: 20px;
+    font-family: var(--root-font-montserrat);
     color: var(--primary-color);
     font-weight: 400;
     text-align: left;
 }
 
+.buttonArrangement {
+    position: absolute;
+    top: -10px;
+    right: 50px;
+}
+
+.buttonSwiper {
+    display: none;
+    column-gap: 24px;
+}
+
+.swiperButtonPrev,
+.swiperButtonNext {
+    background: var(--primary-color);
+    cursor: pointer;
+    height: 94.14px;
+    width: 94.5px;
+    border-radius: 50%;
+}
+
+.swiperButtonPrev:hover,
+.swiperButtonNext:hover {
+    background: linear-gradient(0deg, hsla(0, 0%, 100%, .1), hsla(0, 0%, 100%, .1)), var(--primary-color);
+}
