--- a/src/apps/Layout/geeksPro/blocks-14/geeksPluses/GeeksPluses.module.css
+++ b/src/apps/Layout/geeksPro/blocks-14/geeksPluses/GeeksPluses.module.css
@@ -102,6 +102,7 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 1.5;
+    font-family: 'Montserrat', sans-serif !important;
 }
 @media only screen and (max-width: 834px) {
     .table_text{
