--- a/src/apps/Layout/geeksPro/blocks-14/geeksQuestions/GeeksQuestions.module.css
+++ b/src/apps/Layout/geeksPro/blocks-14/geeksQuestions/GeeksQuestions.module.css
@@ -100,7 +100,9 @@
     font-size: 40px;
     font-weight: 600;
     line-height: 44px;
-    text-transform: uppercase
+    text-transform: uppercase;
+    color: #2c2e35;
+    text-align: left;
 }
 @media only screen and (max-width: 1485px) {
     .first_p{
@@ -119,7 +121,9 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 22px;
-    margin-top: 20px
+    margin-top: 20px;
+    color: #2c2e35;
+    text-align: left;
 }
 @media only screen and (max-width: 1485px) {
     .second_p{
