--- a/src/apps/Layout/geeksPro/blocks-14/mainGeeksPro/GeeksPro.module.css
+++ b/src/apps/Layout/geeksPro/blocks-14/mainGeeksPro/GeeksPro.module.css
@@ -106,6 +106,20 @@
     line-height: 36.4px;
     text-transform: uppercase;
 }
+.first_p {
+    font-family: "Montserrat", sans-serif;
+    color: #fff;
+    text-align: left;
+    font-size: 26px;
+    font-weight: 500;
+}
+.second_p {
+    font-family: "Montserrat", sans-serif;
+    color: #fff;
+    text-align: left;
+    font-size: 26px;
+    font-weight: 500;
+}
 @media only screen and (max-width: 834px){
     .main_p {
         font-size: 12px;
@@ -173,6 +187,7 @@
     row-gap: 4px;
     align-items: center;
     text-decoration: none;
+    font-family: 'Montserrat', sans-serif !important;
 }
 .stat_list h4 {
     color: yellow;
@@ -195,6 +210,7 @@
     font-weight: 400;
     line-height: 24px;
     text-align: center;
+    font-family: 'Montserrat', sans-serif !important;
 }
 @media only screen and (max-width: 834px){
     .stat_list p {
