--- a/src/apps/Layout/courses/components/TitleCours/TitleCourse.css
+++ b/src/apps/Layout/courses/components/TitleCours/TitleCourse.css
@@ -31,8 +31,10 @@
 
 
 
-.titleCoursIn {
+.titleCours > .titleCoursIn {
   color: #fff;
+  font-family: 'Reforma Grotesk', sans-serif;
+  font-size: 150px;
 }
 
 .postTitleCours {
@@ -45,6 +47,7 @@
     padding: 0 0 0 10px;
     text-transform: uppercase;
     font-family: 'Montserrat';
+    text-align: left;
 }
 
 hr {
